# dynamictype_cproj

./: .gitignore  CMakeLists.txt  README.md
include/: dynamictype.h
src/: dynamictype.c  main.c
tests/: CMakeLists.txt  dynamictype_tests.c  dynamictypetemplate_tests.c
